# novel_workflow

./: .env  .env.example  .gitignore  README.md  STATUS.md  daskldjlska.md  plan.md  pyproject.toml  我这个是一个番茄小说从想法到大纲到生成细纲的工作流，你需要帮我构建工作流。 先理解： 我想创作一个工作流去生成全书的章节.md  的撒旦.md
test/: README.md  completion-audit.json  completion-audit.md  coverage-report.json  coverage-report.md  final-evaluation.md  reviews.md  test-matrix.md  test-plan.md  test-run-template.md  validation-summary-2026-07.md
test/drafts/: batch-3chapters.md  ch01-v1.md  ch01-v2.md  ch01-v3.md  ch01-v4.md  ch02-verify.md  court-politics.md  emotion-relationship.md  failure-setback.md  long-info-reveal.md  motif-fatigue.md  multi-goal-chapter.md  multi-line-merge.md  poem-breakout.md  pressure-chapter.md  state-feedback-loop.md
test/volume-01-iterative-run/: rerun-101-105-batch-review-v1.md  (+133 more)
tests/: __init__.py  master_plan_support.py  test_api_runtime.py  test_chapter_service.py  test_config.py  test_environment.py  test_file_storage_v2.py  test_ledger.py  test_long_workload.py  test_master_plan.py  test_matrix_coverage.py  test_outline_validation.py  test_plan_import.py  test_planning_service.py  test_provider.py  test_reporting.py  test_revision.py  test_run_archive.py  test_state_rebuild.py  test_state_store.py  test_storage.py  test_storage_migration.py  test_structured_state.py  test_unit_runner.py  test_wordcount.py
tools/: __init__.py
workflow/: 00-global.md  01-expand.md  02-merge.md  03-chapters.md  04-draft.md  05-update-state.md  06-sample-run.md  README.md  modules.md
(+185 files in other folders)
