[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "novel-workflow-runner"
version = "0.1.0"
description = "修仙搞笑长篇网文工作流执行器"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
novel = "novel_runner.cli:main"

[tool.setuptools]
package-dir = {"" = "tools"}

[tool.setuptools.packages.find]
where = ["tools"]

[tool.setuptools.package-data]
novel_runner = ["schemas/*.json"]
